# antswitcher

./: README.md
control_app/: Cargo.toml  tos9.sh
control_app/src/: easycom.rs  ina226.rs  main.rs  renderer.rs  state.rs  tsa8418.rs
hdl/: s9switcher.tcl  s9switcher.xpr  s9switcher_def_val.txt  s9switcher_dump.txt
hdl/s9switcher.cache/wt/: synthesis.wdf  webtalk_pa.xml
hdl/s9switcher.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_6.xml
hdl/s9switcher.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  runme.sh  system_bd_wrapper.bit  system_bd_wrapper.tcl  system_bd_wrapper.vdi  system_bd_wrapper_bus_skew_routed.rpt  system_bd_wrapper_bus_skew_routed.rpx  system_bd_wrapper_clock_utilization_routed.rpt  system_bd_wrapper_control_sets_placed.rpt  system_bd_wrapper_drc_opted.rpt  system_bd_wrapper_drc_routed.rpt  system_bd_wrapper_io_placed.rpt  system_bd_wrapper_methodology_drc_routed.rpt  system_bd_wrapper_methodology_drc_routed.rpx  system_bd_wrapper_opt.dcp  system_bd_wrapper_physopt.dcp  system_bd_wrapper_placed.dcp  system_bd_wrapper_power_routed.rpt  system_bd_wrapper_power_routed.rpx  system_bd_wrapper_power_summary_routed.pb  system_bd_wrapper_route_status.rpt  system_bd_wrapper_routed.dcp  system_bd_wrapper_timing_summary_routed.pb  system_bd_wrapper_timing_summary_routed.rpt  system_bd_wrapper_timing_summary_routed.rpx  system_bd_wrapper_utilization_placed.pb  (+4 more)
linux/u-boot/: bitmain_antminer_s9_defconfig
(+90 files in other folders)
